Improvements on views and in the routes of delete, update and create resources

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -34,8 +34,12 @@ pt-BR:
         devolution_date: Data de Devolução
         discharge_date: Data da Baixa
         status: Status
+        reader: Leitor
+        book: Livro
         reader_id: Leitor
         book_id: Livro
       user:
         name: Nome
         email: Email
+        password: Senha
+        password_confirmation: Confirmação da Senha
